@startuml
title US005 - As an Administrator, I want to register an Author in the system, \n so that publications of that author can be added.

skinparam monochrome false
skinparam shadowing false
skinparam defaultFontName Futura
skinparam backgroundColor CornSilk
skinparam classBackgroundColor WhiteSmoke
skinparam classAttributeIconSize 0


class CreateAuthorUI {
  +requestAuthorRegistration()
  +displayAuthorRegistrationForm()
  +submitAuthorName(authorName: String)
  +displayResult()
}

class CreateAuthorController {
  +CreateAuthorController(ar: MemoAuthorRepo)
  +createAuthor(authorName: String): Author
}

interface ICreateAuthor{
  +createAuthor(authorName: String): Author
/'  +existsByName(name: String): boolean'/
  +findAll(): List<Author>
}

/'note right of CreateAuthorController
Validates authorName (null/blank)
Trims before delegating to MemoAuthorRepo
end note'/

class MemoAuthorRepo {
  -authors: List<Author>
  +createAuthor(authorName: String): Author
/'  +existsByName(name: String): boolean'/
  +findAll(): List<Author>
}

class AuthorFactory {
  +createAuthor(authorName: String): Author
}

class Author {
  -authorName: String
  +getName(): String
}

CreateAuthorUI "1"..>"1" CreateAuthorController : uses
CreateAuthorController "1"..>"1" ICreateAuthor : uses
ICreateAuthor "1"<|.. "1" MemoAuthorRepo
MemoAuthorRepo "1" --> "1" AuthorFactory : uses
AuthorFactory "1"-->"*" Author : creates

@enduml